[package]
name = "git-notify"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.11", features = ["derive"] }
filecmp = "0.2.0"
rustygit = "0.4.4"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
