[package]
name = "git-notify"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.11", features = ["derive"] }
either = "1.6.1"
filecmp = "0.2.0"
itertools = "0.10.1"
once_cell = "1.8.0"
pest = "2.1.3"
pest_derive = "2.1.0"
regex = "1.5.4"
rustygit = "0.4.4"
serde_json = "1.0.68"
simple-error = "0.2.3"
thiserror = "1.0.29"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
